parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> block
Rule 1     block -> block sentence
Rule 2     block -> <empty>
Rule 3     sentence -> declare SEMICOLON
Rule 4     sentence -> assign SEMICOLON
Rule 5     sentence -> control SEMICOLON
Rule 6     declare -> TYPE NAME
Rule 7     declare -> TYPE NAME ASSIGN expr
Rule 8     assign -> NAME ASSIGN expr
Rule 9     control -> while
Rule 10    control -> if
Rule 11    control -> BREAK
Rule 12    control -> CONTINUE
Rule 13    while -> WHILE LP expr RP COLON block END
Rule 14    if -> IF LP expr RP COLON block elif else END
Rule 15    elif -> elif ELIF LP expr RP COLON block
Rule 16    elif -> <empty>
Rule 17    else -> ELSE COLON block
Rule 18    else -> <empty>
Rule 19    aexpr -> aexpr BOR aexpr
Rule 20    aexpr -> aexpr BXOR aexpr
Rule 21    aexpr -> aexpr BAND aexpr
Rule 22    aexpr -> aexpr BRSHIFT aexpr
Rule 23    aexpr -> aexpr BLSHIFT aexpr
Rule 24    aexpr -> aexpr PLUS aexpr
Rule 25    aexpr -> aexpr MINUS aexpr
Rule 26    aexpr -> aexpr TIMES aexpr
Rule 27    aexpr -> aexpr MODS aexpr
Rule 28    aexpr -> aexpr DIVIDES aexpr
Rule 29    aexpr -> aexpr EXP aexpr
Rule 30    aexpr -> MINUS aexpr
Rule 31    aexpr -> BNOT aexpr
Rule 32    aexpr -> LP aexpr RP
Rule 33    aexpr -> TYPE LP aexpr RP
Rule 34    aexpr -> INT
Rule 35    aexpr -> FLOAT
Rule 36    aexpr -> BOOL
Rule 37    aexpr -> NAME
Rule 38    expr -> expr OR expr
Rule 39    expr -> expr AND expr
Rule 40    expr -> aexpr EQ aexpr
Rule 41    expr -> aexpr NEQ aexpr
Rule 42    expr -> aexpr GT aexpr
Rule 43    expr -> aexpr GET aexpr
Rule 44    expr -> aexpr LT aexpr
Rule 45    expr -> aexpr LET aexpr
Rule 46    expr -> NOT expr
Rule 47    expr -> aexpr

Terminals, with rules where they appear

AND                  : 39
ASSIGN               : 7 8
BAND                 : 21
BLSHIFT              : 23
BNOT                 : 31
BOOL                 : 36
BOR                  : 19
BREAK                : 11
BRSHIFT              : 22
BXOR                 : 20
COLON                : 13 14 15 17
CONTINUE             : 12
DIVIDES              : 28
ELIF                 : 15
ELSE                 : 17
END                  : 13 14
EQ                   : 40
EXP                  : 29
FLOAT                : 35
GET                  : 43
GT                   : 42
IF                   : 14
INT                  : 34
LET                  : 45
LP                   : 13 14 15 32 33
LT                   : 44
MINUS                : 25 30
MODS                 : 27
NAME                 : 6 7 8 37
NEQ                  : 41
NOT                  : 46
OR                   : 38
PLUS                 : 24
RP                   : 13 14 15 32 33
SEMICOLON            : 3 4 5
TIMES                : 26
TYPE                 : 6 7 33
WHILE                : 13
error                : 

Nonterminals, with rules where they appear

aexpr                : 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 31 32 33 40 40 41 41 42 42 43 43 44 44 45 45 47
assign               : 4
block                : 1 13 14 15 17 0
control              : 5
declare              : 3
elif                 : 14 15
else                 : 14
expr                 : 7 8 13 14 15 38 38 39 39 46
if                   : 10
sentence             : 1
while                : 9

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . block sentence
    (2) block -> .

    TYPE            reduce using rule 2 (block -> .)
    NAME            reduce using rule 2 (block -> .)
    BREAK           reduce using rule 2 (block -> .)
    CONTINUE        reduce using rule 2 (block -> .)
    WHILE           reduce using rule 2 (block -> .)
    IF              reduce using rule 2 (block -> .)
    $end            reduce using rule 2 (block -> .)

    block                          shift and go to state 1

state 1

    (0) S' -> block .
    (1) block -> block . sentence
    (3) sentence -> . declare SEMICOLON
    (4) sentence -> . assign SEMICOLON
    (5) sentence -> . control SEMICOLON
    (6) declare -> . TYPE NAME
    (7) declare -> . TYPE NAME ASSIGN expr
    (8) assign -> . NAME ASSIGN expr
    (9) control -> . while
    (10) control -> . if
    (11) control -> . BREAK
    (12) control -> . CONTINUE
    (13) while -> . WHILE LP expr RP COLON block END
    (14) if -> . IF LP expr RP COLON block elif else END

    TYPE            shift and go to state 12
    NAME            shift and go to state 7
    BREAK           shift and go to state 9
    CONTINUE        shift and go to state 11
    WHILE           shift and go to state 4
    IF              shift and go to state 6

    control                        shift and go to state 2
    sentence                       shift and go to state 3
    declare                        shift and go to state 13
    while                          shift and go to state 10
    assign                         shift and go to state 8
    if                             shift and go to state 5

state 2

    (5) sentence -> control . SEMICOLON

    SEMICOLON       shift and go to state 14


state 3

    (1) block -> block sentence .

    TYPE            reduce using rule 1 (block -> block sentence .)
    NAME            reduce using rule 1 (block -> block sentence .)
    BREAK           reduce using rule 1 (block -> block sentence .)
    CONTINUE        reduce using rule 1 (block -> block sentence .)
    WHILE           reduce using rule 1 (block -> block sentence .)
    IF              reduce using rule 1 (block -> block sentence .)
    ELIF            reduce using rule 1 (block -> block sentence .)
    ELSE            reduce using rule 1 (block -> block sentence .)
    END             reduce using rule 1 (block -> block sentence .)
    $end            reduce using rule 1 (block -> block sentence .)


state 4

    (13) while -> WHILE . LP expr RP COLON block END

    LP              shift and go to state 15


state 5

    (10) control -> if .

    SEMICOLON       reduce using rule 10 (control -> if .)


state 6

    (14) if -> IF . LP expr RP COLON block elif else END

    LP              shift and go to state 16


state 7

    (8) assign -> NAME . ASSIGN expr

    ASSIGN          shift and go to state 17


state 8

    (4) sentence -> assign . SEMICOLON

    SEMICOLON       shift and go to state 18


state 9

    (11) control -> BREAK .

    SEMICOLON       reduce using rule 11 (control -> BREAK .)


state 10

    (9) control -> while .

    SEMICOLON       reduce using rule 9 (control -> while .)


state 11

    (12) control -> CONTINUE .

    SEMICOLON       reduce using rule 12 (control -> CONTINUE .)


state 12

    (6) declare -> TYPE . NAME
    (7) declare -> TYPE . NAME ASSIGN expr

    NAME            shift and go to state 19


state 13

    (3) sentence -> declare . SEMICOLON

    SEMICOLON       shift and go to state 20


state 14

    (5) sentence -> control SEMICOLON .

    TYPE            reduce using rule 5 (sentence -> control SEMICOLON .)
    NAME            reduce using rule 5 (sentence -> control SEMICOLON .)
    BREAK           reduce using rule 5 (sentence -> control SEMICOLON .)
    CONTINUE        reduce using rule 5 (sentence -> control SEMICOLON .)
    WHILE           reduce using rule 5 (sentence -> control SEMICOLON .)
    IF              reduce using rule 5 (sentence -> control SEMICOLON .)
    END             reduce using rule 5 (sentence -> control SEMICOLON .)
    ELIF            reduce using rule 5 (sentence -> control SEMICOLON .)
    ELSE            reduce using rule 5 (sentence -> control SEMICOLON .)
    $end            reduce using rule 5 (sentence -> control SEMICOLON .)


state 15

    (13) while -> WHILE LP . expr RP COLON block END
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . aexpr EQ aexpr
    (41) expr -> . aexpr NEQ aexpr
    (42) expr -> . aexpr GT aexpr
    (43) expr -> . aexpr GET aexpr
    (44) expr -> . aexpr LT aexpr
    (45) expr -> . aexpr LET aexpr
    (46) expr -> . NOT expr
    (47) expr -> . aexpr
    (19) aexpr -> . aexpr BOR aexpr
    (20) aexpr -> . aexpr BXOR aexpr
    (21) aexpr -> . aexpr BAND aexpr
    (22) aexpr -> . aexpr BRSHIFT aexpr
    (23) aexpr -> . aexpr BLSHIFT aexpr
    (24) aexpr -> . aexpr PLUS aexpr
    (25) aexpr -> . aexpr MINUS aexpr
    (26) aexpr -> . aexpr TIMES aexpr
    (27) aexpr -> . aexpr MODS aexpr
    (28) aexpr -> . aexpr DIVIDES aexpr
    (29) aexpr -> . aexpr EXP aexpr
    (30) aexpr -> . MINUS aexpr
    (31) aexpr -> . BNOT aexpr
    (32) aexpr -> . LP aexpr RP
    (33) aexpr -> . TYPE LP aexpr RP
    (34) aexpr -> . INT
    (35) aexpr -> . FLOAT
    (36) aexpr -> . BOOL
    (37) aexpr -> . NAME

    NOT             shift and go to state 30
    MINUS           shift and go to state 23
    BNOT            shift and go to state 21
    LP              shift and go to state 24
    TYPE            shift and go to state 31
    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 25
    NAME            shift and go to state 26

    expr                           shift and go to state 28
    aexpr                          shift and go to state 22

state 16

    (14) if -> IF LP . expr RP COLON block elif else END
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . aexpr EQ aexpr
    (41) expr -> . aexpr NEQ aexpr
    (42) expr -> . aexpr GT aexpr
    (43) expr -> . aexpr GET aexpr
    (44) expr -> . aexpr LT aexpr
    (45) expr -> . aexpr LET aexpr
    (46) expr -> . NOT expr
    (47) expr -> . aexpr
    (19) aexpr -> . aexpr BOR aexpr
    (20) aexpr -> . aexpr BXOR aexpr
    (21) aexpr -> . aexpr BAND aexpr
    (22) aexpr -> . aexpr BRSHIFT aexpr
    (23) aexpr -> . aexpr BLSHIFT aexpr
    (24) aexpr -> . aexpr PLUS aexpr
    (25) aexpr -> . aexpr MINUS aexpr
    (26) aexpr -> . aexpr TIMES aexpr
    (27) aexpr -> . aexpr MODS aexpr
    (28) aexpr -> . aexpr DIVIDES aexpr
    (29) aexpr -> . aexpr EXP aexpr
    (30) aexpr -> . MINUS aexpr
    (31) aexpr -> . BNOT aexpr
    (32) aexpr -> . LP aexpr RP
    (33) aexpr -> . TYPE LP aexpr RP
    (34) aexpr -> . INT
    (35) aexpr -> . FLOAT
    (36) aexpr -> . BOOL
    (37) aexpr -> . NAME

    NOT             shift and go to state 30
    MINUS           shift and go to state 23
    BNOT            shift and go to state 21
    LP              shift and go to state 24
    TYPE            shift and go to state 31
    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 25
    NAME            shift and go to state 26

    expr                           shift and go to state 32
    aexpr                          shift and go to state 22

state 17

    (8) assign -> NAME ASSIGN . expr
    (38) expr -> . expr OR expr
    (39) expr -> . expr AND expr
    (40) expr -> . aexpr EQ aexpr
    (41) expr -> . aexpr NEQ aexpr
    (42) expr -> . aexpr GT aexpr
    (43) expr -> . aexpr GET aexpr
    (44) expr -> . aexpr LT aexpr
    (45) expr -> . aexpr LET aexpr
    (46) expr -> . NOT expr
    (47) expr -> . aexpr
    (19) aexpr -> . aexpr BOR aexpr
    (20) aexpr -> . aexpr BXOR aexpr
    (21) aexpr -> . aexpr BAND aexpr
    (22) aexpr -> . aexpr BRSHIFT aexpr
    (23) aexpr -> . aexpr BLSHIFT aexpr
    (24) aexpr -> . aexpr PLUS aexpr
    (25) aexpr -> . aexpr MINUS aexpr
    (26) aexpr -> . aexpr TIMES aexpr
    (27) aexpr -> . aexpr MODS aexpr
    (28) aexpr -> . aexpr DIVIDES aexpr
    (29) aexpr -> . aexpr EXP aexpr
    (30) aexpr -> . MINUS aexpr
    (31) aexpr -> . BNOT aexpr
    (32) aexpr -> . LP aexpr RP
    (33) aexpr -> . TYPE LP aexpr RP
    (34) aexpr -> . INT
    (35) aexpr -> . FLOAT
    (36) aexpr -> . BOOL
    (37) aexpr -> . NAME

    NOT             shift and go to state 30
    MINUS           shift and go to state 23
    BNOT            shift and go to state 21
    LP              shift and go to state 24
    TYPE            shift and go to state 31
    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 25
    NAME            shift and go to state 26

    expr                           shift and go to state 33
    aexpr                          shift and go to state 22

state 18

    (4) sentence -> assign SEMICOLON .

    TYPE            reduce using rule 4 (sentence -> assign SEMICOLON .)
    NAME            reduce using rule 4 (sentence -> assign SEMICOLON .)
    BREAK           reduce using rule 4 (sentence -> assign SEMICOLON .)
    CONTINUE        reduce using rule 4 (sentence -> assign SEMICOLON .)
    WHILE           reduce using rule 4 (sentence -> assign SEMICOLON .)
    IF              reduce using rule 4 (sentence -> assign SEMICOLON .)
    END             reduce using rule 4 (sentence -> assign SEMICOLON .)
    ELIF            reduce using rule 4 (sentence -> assign SEMICOLON .)
    ELSE            reduce using rule 4 (sentence -> assign SEMICOLON .)
    $end            reduce using rule 4 (sentence -> assign SEMICOLON .)


state 19

    (6) declare -> TYPE NAME .
    (7) declare -> TYPE NAME . ASSIGN expr

    SEMICOLON       reduce using rule 6 (declare -> TYPE NAME .)
    ASSIGN          shift and go to state 34


state 20

    (3) sentence -> declare SEMICOLON .

    TYPE            reduce using rule 3 (sentence -> declare SEMICOLON .)
    NAME            reduce using rule 3 (sentence -> declare SEMICOLON .)
    BREAK           reduce using rule 3 (sentence -> declare SEMICOLON .)
    CONTINUE        reduce using rule 3 (sentence -> declare SEMICOLON .)
    WHILE           reduce using rule 3 (sentence -> declare SEMICOLON .)
    IF              reduce using rule 3 (sentence -> declare SEMICOLON .)
    END             reduce using rule 3 (sentence -> declare SEMICOLON .)
    ELIF            reduce using rule 3 (sentence -> declare SEMICOLON .)
    ELSE            reduce using rule 3 (sentence -> declare SEMICOLON .)
    $end            reduce using rule 3 (sentence -> declare SEMICOLON .)


state 21

    (31) aexpr -> BNOT . aexpr
    (19) aexpr -> . aexpr BOR aexpr
    (20) aexpr -> . aexpr BXOR aexpr
    (21) aexpr -> . aexpr BAND aexpr
    (22) aexpr -> . aexpr BRSHIFT aexpr
    (23) aexpr -> . aexpr BLSHIFT aexpr
    (24) aexpr -> . aexpr PLUS aexpr
    (25) aexpr -> . aexpr MINUS aexpr
    (26) aexpr -> . aexpr TIMES aexpr
    (27) aexpr -> . aexpr MODS aexpr
    (28) aexpr -> . aexpr DIVIDES aexpr
    (29) aexpr -> . aexpr EXP aexpr
    (30) aexpr -> . MINUS aexpr
    (31) aexpr -> . BNOT aexpr
    (32) aexpr -> . LP aexpr RP
    (33) aexpr -> . TYPE LP aexpr RP
    (34) aexpr -> . INT
    (35) aexpr -> . FLOAT
    (36) aexpr -> . BOOL
    (37) aexpr -> . NAME

    MINUS           shift and go to state 23
    BNOT            shift and go to state 21
    LP              shift and go to state 24
    TYPE            shift and go to state 31
    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 25
    NAME            shift and go to state 26

    aexpr                          shift and go to state 35

state 22

    (40) expr -> aexpr . EQ aexpr
    (41) expr -> aexpr . NEQ aexpr
    (42) expr -> aexpr . GT aexpr
    (43) expr -> aexpr . GET aexpr
    (44) expr -> aexpr . LT aexpr
    (45) expr -> aexpr . LET aexpr
    (47) expr -> aexpr .
    (19) aexpr -> aexpr . BOR aexpr
    (20) aexpr -> aexpr . BXOR aexpr
    (21) aexpr -> aexpr . BAND aexpr
    (22) aexpr -> aexpr . BRSHIFT aexpr
    (23) aexpr -> aexpr . BLSHIFT aexpr
    (24) aexpr -> aexpr . PLUS aexpr
    (25) aexpr -> aexpr . MINUS aexpr
    (26) aexpr -> aexpr . TIMES aexpr
    (27) aexpr -> aexpr . MODS aexpr
    (28) aexpr -> aexpr . DIVIDES aexpr
    (29) aexpr -> aexpr . EXP aexpr

    EQ              shift and go to state 51
    NEQ             shift and go to state 52
    GT              shift and go to state 36
    GET             shift and go to state 39
    LT              shift and go to state 45
    LET             shift and go to state 47
    OR              reduce using rule 47 (expr -> aexpr .)
    AND             reduce using rule 47 (expr -> aexpr .)
    SEMICOLON       reduce using rule 47 (expr -> aexpr .)
    RP              reduce using rule 47 (expr -> aexpr .)
    BOR             shift and go to state 41
    BXOR            shift and go to state 40
    BAND            shift and go to state 44
    BRSHIFT         shift and go to state 43
    BLSHIFT         shift and go to state 42
    PLUS            shift and go to state 49
    MINUS           shift and go to state 48
    TIMES           shift and go to state 50
    MODS            shift and go to state 46
    DIVIDES         shift and go to state 37
    EXP             shift and go to state 38


state 23

    (30) aexpr -> MINUS . aexpr
    (19) aexpr -> . aexpr BOR aexpr
    (20) aexpr -> . aexpr BXOR aexpr
    (21) aexpr -> . aexpr BAND aexpr
    (22) aexpr -> . aexpr BRSHIFT aexpr
    (23) aexpr -> . aexpr BLSHIFT aexpr
    (24) aexpr -> . aexpr PLUS aexpr
    (25) aexpr -> . aexpr MINUS aexpr
    (26) aexpr -> . aexpr TIMES aexpr
    (27) aexpr -> . aexpr MODS aexpr
    (28) aexpr -> . aexpr DIVIDES aexpr
    (29) aexpr -> . aexpr EXP aexpr
    (30) aexpr -> . MINUS aexpr
    (31) aexpr -> . BNOT aexpr
    (32) aexpr -> . LP aexpr RP
    (33) aexpr -> . TYPE LP aexpr RP
    (34) aexpr -> . INT
    (35) aexpr -> . FLOAT
    (36) aexpr -> . BOOL
    (37) aexpr -> . NAME

    MINUS           shift and go to state 23
    BNOT            shift and go to state 21
    LP              shift and go to state 24
    TYPE            shift and go to state 31
    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 25
    NAME            shift and go to state 26

    aexpr                          shift and go to state 53

state 24

    (32) aexpr -> LP . aexpr RP
    (19) aexpr -> . aexpr BOR aexpr
    (20) aexpr -> . aexpr BXOR aexpr
    (21) aexpr -> . aexpr BAND aexpr
    (22) aexpr -> . aexpr BRSHIFT aexpr
    (23) aexpr -> . aexpr BLSHIFT aexpr
    (24) aexpr -> . aexpr PLUS aexpr
    (25) aexpr -> . aexpr MINUS aexpr
    (26) aexpr -> . aexpr TIMES aexpr
    (27) aexpr -> . aexpr MODS aexpr
    (28) aexpr -> . aexpr DIVIDES aexpr
    (29) aexpr -> . aexpr EXP aexpr
    (30) aexpr -> . MINUS aexpr
    (31) aexpr -> . BNOT aexpr
    (32) aexpr -> . LP aexpr RP
    (33) aexpr -> . TYPE LP aexpr RP
    (34) aexpr -> . INT
    (35) aexpr -> . FLOAT
    (36) aexpr -> . BOOL
    (37) aexpr -> . NAME

    MINUS           shift and go to state 23
    BNOT            shift and go to state 21
    LP              shift and go to state 24
    TYPE            shift and go to state 31
    INT             shift and go to state 27
    FLOAT           shift and go to state 29
    BOOL            shift and go to state 25
    NAME            shift and go to state 26

    aexpr                          shift and go to state 54

state 25

    (36) aexpr -> BOOL .

    BOR             reduce using rule 36 (aexpr -> BOOL .)
    BXOR            reduce using rule 36 (aexpr -> BOOL .)
    BAND            reduce using rule 36 (aexpr -> BOOL .)
    BRSHIFT         reduce using rule 36 (aexpr -> BOOL .)
    BLSHIFT         reduce using rule 36 (aexpr -> BOOL .)
    PLUS            reduce using rule 36 (aexpr -> BOOL .)
    MINUS           reduce using rule 36 (aexpr -> BOOL .)
    TIMES           reduce using rule 36 (aexpr -> BOOL .)
    MODS            reduce using rule 36 (aexpr -> BOOL .)
    DIVIDES         reduce using rule 36 (aexpr -> BOOL .)
    EXP             reduce using rule 36 (aexpr -> BOOL .)
    RP              reduce using rule 36 (aexpr -> BOOL .)
    OR              reduce using rule 36 (aexpr -> BOOL .)
    AND             reduce using rule 36 (aexpr -> BOOL .)
    SEMICOLON       reduce using rule 36 (aexpr -> BOOL .)
    EQ              reduce using rule 36 (aexpr -> BOOL .)
    NEQ             reduce using rule 36 (aexpr -> BOOL .)
    GT              reduce using rule 36 (aexpr -> BOOL .)
    GET             reduce using rule 36 (aexpr -> BOOL .)
    LT              reduce using rule 36 (aexpr -> BOOL .)
    LET             reduce using rule 36 (aexpr -> BOOL .)


state 26

    (37) aexpr -> NAME .
